giri-dir-01/projects/giri-test/clusternetworkpolicies/june-policy.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: june-policy
  project: giri-test
spec:
  rules:
  - name: xwing
    version: v1
  - name: cluster-scoped-rule
    version: v2
  version: v22
