giri-dir-01/projects/giri-test/clusternetworkpolicies/mar-ccnp.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: mar-ccnp
  project: giri-test
spec:
  rules:
  - name: mar-ccnpr
    version: v1
  version: v2
