giri-dir-01/projects/giri-test/clusternetworkpolicies/may2-ccnp1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: may2-ccnp1
  project: giri-test
spec:
  rules:
  - name: may2-ccnpr1
    version: v1
  version: v1
